--- a/event/templates/_base.html
+++ b/event/templates/_base.html
@@ -6,10 +6,9 @@
 <head>
   <meta charset="utf-8">
   <title>{% block title %}Bookstore{% endblock title %}</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1,
-  shrink-to-fit=no">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/tailwindcss/2.0.2/tailwind.min.css" rel="stylesheet">
+  <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
   <!-- CSS only -->
 <!--<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">-->
 
@@ -18,19 +17,21 @@
 <body>
   <header>
     <!-- Fixed navbar -->
-    <div class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4
-     mb-3 bg-white border-bottom shadow-sm">
-      <a href="{% url 'home' %}" class="navbar-brand my-0 mr-md-auto
-      font-bold"><span>Dz</span>DazShop</a>
-        <nav class="my-2 my-md-0 mr-md-3">
-          <a href="{% url 'events' %}">Events</a>
-      </nav>
+    <div class="d-flex flex-column flex-md-row align-items-center p-6 my-3 bg-white border-bottom shadow-sm">
+      <a href="{% url 'home' %}" class="navbar-brand my-0 font-bold"><span class="rounded-xl bg-purple-300 text-purple-800 p-4 mx-3">Dz</span> <span class="font-bold">DazShop</span></a>
+
     </div>
   </header>
-  <div class="container">
+  <div class="flex flex-row">
+     <nav class="w-1/5 border-r-2 text-center">
+          <a href="{% url 'events' %}">Events</a> | <a href="{% url 'event_new' %}">+ New </a>
+      </nav>
+     <div class="container">
     {% block content %}
     {% endblock content %}
   </div>
+  </div>
+
 <!-- JavaScript Bundle with Popper -->
 <!--<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>-->
   <!-- jQuery first, then Popper.js, then Bootstrap JS
