--- a/event/templates/events.html
+++ b/event/templates/events.html
@@ -5,7 +5,10 @@
 {% block content %}
   {% for event in object_list %}
     <div class="card">
-      <img class="bookcover" src="{{ event.Photo.url }}">
+      {% if event.Photo %}
+     <img class="bookcover" src="{{ event.Photo.url }}">
+{% endif %}
+
       <div class="card-header">
         <span class="font-weight-bold">{{ event.Name }}</span> &middot;<br>
         <span class="text-muted"> Starting date: {{ event.Starting_date }} | Ending date: {{ event.Ending_date }}</span>
