--- a/static/css/base.css
+++ b/static/css/base.css
@@ -24,6 +24,6 @@ input[type=checkbox] {
     width: auto;
     border-radius: 3px;
 }
-input[type="file"] {
+/*input[type="file"] {
     display: none;
-}
+}*/
