--- a/event/templates/event_edit.html
+++ b/event/templates/event_edit.html
@@ -3,7 +3,7 @@
 {% block content %}
 <div class="m-6">
   <h1 class="text-4xl font-bold text-black">Create Event</h1>
-  <form class="creationForm my-6 w-2/3" method="POST"  enctype="multipart/form-data">{% csrf_token %}
+  <form class="creationForm my-6 w-2/3" method="post"  enctype="multipart/form-data">{% csrf_token %}
     <div class="creationForm grid grid-cols-2 ">
          {{ form.non_field_errors }}
         <div class="fieldWrapper p-4">
@@ -41,7 +41,7 @@
         </div>
     </div>
 <div class="p-4 flex justify-end">
-        <button class="bg-purple-800 text-white px-16 py-3 rounded outline-none block" type="submit">Save</button>
+        <button class="bg-purple-800 text-white px-16 py-3 rounded outline-none block" type="submit">Update</button>
 </div>
   </form>
 </div>
