--- a/staticfiles/css/base.css
+++ b/staticfiles/css/base.css
@@ -11,11 +11,11 @@ input, select, textarea , .imageInput{
     padding: 2%;
     line-height: inherit;
     color: inherit;
-    background-color: aliceblue;
+    background-color: #F8FAFC;;
     width: 100%;
     border-radius: 5px;
 }
-input:focus{
+input:focus,button:focus{
 outline:none !important
 }
 input[type=checkbox] {
@@ -24,6 +24,6 @@ input[type=checkbox] {
     width: auto;
     border-radius: 3px;
 }
-input[type="file"] {
+/*input[type="file"] {
     display: none;
-}
+}*/
