--- a/event/templates/events.html
+++ b/event/templates/events.html
@@ -16,7 +16,7 @@
       </div>
       <div class="card-body">
           Locations
-          {% for loc in event.Locations.objects.all %}
+          {% for loc in event.Locations.all %}
           <span>{{ loc.Location }}</span>
           {% endfor %}
       </div>
