--- a/event/templates/Asset_delete.html
+++ b/event/templates/Asset_delete.html
@@ -3,7 +3,7 @@
 {% block content %}
   <h1>Delete</h1>
   <form action="" method="post">{% csrf_token %}
-    <p>Are you sure you want to delete "{{ event.Name }}"?</p>
+    <p>Are you sure you want to delete "{{ asset.code }}"?</p>
     <button class="bg-purple-800 text-white px-16 py-3 rounded outline-none block mt-6" type="submit">Confirm</button>
   </form>
 {% endblock content %}
