create delete update location

--- a/event/templates/_base.html
+++ b/event/templates/_base.html
@@ -31,6 +31,9 @@
              <li>
                  <a href="{% url 'Assets_list' %}">Assets</a> | <a href="{% url 'Asset_new' %}">+ New </a>
              </li>
+             <li>
+                 <a href="{% url 'location_list' %}">Locations</a> | <a href="{% url 'location_new' %}">+ New </a>
+             </li>
          </ul>
       </nav>
      <div class="container">
