--- a/staticfiles/css/base.css
+++ b/staticfiles/css/base.css
@@ -7,13 +7,16 @@
 margin-top:2%;
 margin-bottom:2%;
 }
-input, select, textarea , .imageInput{
-    padding: 2%;
-    line-height: inherit;
-    color: inherit;
-    background-color: #F8FAFC;;
-    width: 100%;
-    border-radius: 5px;
+input, select, textarea{
+    background-color: #F8FAFC !important;
+}
+.imageInput,.clearablefileinput{
+   padding: 1.35% 1% !important;
+    line-height: inherit !important;
+    color: inherit !important;
+    width: 100% !important;
+    border-radius: 9px !important;
+    border: solid 1px rgba(209,213,219,0.9);
 }
 input:focus,button:focus{
 outline:none !important
@@ -24,6 +27,6 @@ input[type=checkbox] {
     width: auto;
     border-radius: 3px;
 }
-/*input[type="file"] {
+/*#div_id_code{
     display: none;
 }*/
