--- a/event/templates/_base.html
+++ b/event/templates/_base.html
@@ -25,16 +25,22 @@
 
     {% if user.is_authenticated %}
         <div class="flex">
-            <div class="w-14 h-14 bg-gray-300 rounded-full mr-3"></div>
+            <div class="w-14 h-14 bg-gray-300 rounded-full mr-3">
+                <img src="{{ user.profile_pic }}">
+            </div>
             <div>
               <p class="font-semibold text-lg capitalized">{{ user.username }}</p><p class="text-sm text-gray-300">{{ user.email }}</p>
             </div>
+            <p><a href="{% url 'logout' %}">Log Out</a></p>
 
         </div>
 <!--        <p><a href="#">Log out</a></p>-->
 
       {% else %}
-        <a href="#">Log In</a>
+        <div class="flex-end">
+            <a class="mx-2" href="{% url 'login' %}">Log In</a>
+            <a class="mx-2" href="{% url 'signup' %}">Sign Up</a>
+        </div>
       {% endif %}
     </div>
   </header>
