--- a/event/templates/home.html
+++ b/event/templates/home.html
@@ -7,4 +7,7 @@
 
 <h1>Homepage</h1>
   <img class="bookcover" src="{% static 'images/dfp.png' %}">
+<h1 class="color-red-800 text-xl  ">
+test red
+</h1>
 {% endblock content %}
