--- a/templates/registration/password_change_done.html
+++ b/templates/registration/password_change_done.html
@@ -1,6 +1,6 @@
-{% extends 'base.html' %}
+{% extends 'nonLogedBase.html' %}
 {% block title %}Password Change Successful{% endblock title %}
 {% block content %}
-    <h1>Password change successful</h1>
+    <h1 class="text-4xl font-bold text-black mb-3">Password change successful</h1>
     <p>Your password was changed.</p>
 {% endblock content %}
