--- a/templates/registration/signup.html
+++ b/templates/registration/signup.html
@@ -1,9 +1,9 @@
-{% extends '_base.html' %}
+{% extends 'nonLogedBase.html' %}
 {% load crispy_forms_tags %}
 {% block title %}Sign Up{% endblock title %}
 {% block content %}
-<h2>Sign Up</h2>
-<form method="post" enctype="multipart/form-data">
+<h1 class="text-4xl font-bold text-black mb-3">Sign Up</h1>
+<form method="post" enctype="multipart/form-data"  class="w-2/3">
     {% csrf_token %}
     {{ form|crispy }}
     <button type="submit">Sign Up</button>
