--- a/templates/registration/signup.html
+++ b/templates/registration/signup.html
@@ -2,10 +2,10 @@
 {% load crispy_forms_tags %}
 {% block title %}Sign Up{% endblock title %}
 {% block content %}
-<h1 class="text-4xl font-bold text-black mb-3">Sign Up</h1>
-<form method="post" enctype="multipart/form-data"  class="w-2/3">
+<h1 class="text-4xl font-bold text-black text-center mb-3">Sign Up</h1>
+<form method="post" enctype="multipart/form-data" >
     {% csrf_token %}
     {{ form|crispy }}
-    <button type="submit">Sign Up</button>
+    <button class="bg-purple-800 text-white px-8 py-3 rounded outline-none block mx-auto my-6" type="submit">Sign Up</button>
 </form>
 {% endblock content %}
