--- a/templates/nonLogedBase.html
+++ b/templates/nonLogedBase.html
@@ -19,7 +19,7 @@
     <!-- Fixed navbar -->
     <div class="flex justify-between align-items-center p-6 bg-white border-bottom shadow-sm">
         {% if user.is_authenticated %}
-            <a href="{% url 'events' %}" class="navbar-brand my-0 font-bold block flex">
+           <a href="{% url 'events' %}" class="navbar-brand my-0 font-bold block flex" style="align-items: center;">
                 <div class="rounded-xl bg-purple-300 text-purple-800 p-4 mx-3">Dz</div>
                 <div class="font-bold  flex flex-col justify-center">DazShop</div>
             </a>
@@ -43,7 +43,7 @@
 <!--        <p><a href="#">Log out</a></p>-->
 
       {% else %}
-        <a href="{% url 'login' %}" class="navbar-brand my-0 font-bold block flex">
+     <a href="{% url 'login' %}" class="navbar-brand my-0 font-bold block flex" style="align-items: center;">
                 <div class="rounded-xl bg-purple-300 text-purple-800 p-4 mx-3">Dz</div>
                 <div class="font-bold  flex flex-col justify-center">DazShop</div>
             </a>
