--- a/event/templates/Asset_detail.html
+++ b/event/templates/Asset_detail.html
@@ -11,7 +11,7 @@
       <p>ASSETS_TYPE {{object.ASSETS_TYPE}}</p>
   </div>
 
-  <p><a href="{% url 'Asset_edit' asset.id %}">Edit</a> |
-    <a href="{% url 'Asset_delete' asset.id %}">Delete</a></p>
-  <p>Back to <a href="{% url 'Assets_list' %}">All Articles</a>.</p>
+  <p><a class="text-purple-400 capitalize hover:text-purple-800" href="{% url 'Asset_edit' asset.id %}">Edit</a> |
+    <a class="text-purple-400 capitalize hover:text-purple-800" href="{% url 'Asset_delete' asset.id %}">Delete</a></p>
+  <p>Back to <a href="{% url 'Assets_list' %}">All Assets</a>.</p>
 {% endblock content %}
