--- a/event/templates/Assets_list.html
+++ b/event/templates/Assets_list.html
@@ -19,7 +19,7 @@
           Google maps link: {{ asset.Google_maps_link }}
       </div>
       <div class="card-footer text-center text-muted">
-        <a href="{% url 'Asset_edit' asset.id %}">Edit</a> | <a href="{% url 'Asset_delete' asset.id %}">Delete</a>
+        <a class="text-purple-400 capitalize hover:text-purple-800" href="{% url 'Asset_edit' asset.id %}">Edit</a> | <a class="text-purple-400 capitalize hover:text-purple-800" href="{% url 'Asset_delete' asset.id %}">Delete</>
       </div>
     </div>
 
