--- a/event/templates/_base.html
+++ b/event/templates/_base.html
@@ -62,13 +62,13 @@
      <nav class="w-1/5 border-r-2 pl-16">
          <ul>
              <li class="my-6">
-                 <a class="font-semibold text-md" href="{% url 'events' %}">Events</a>  <a class="text-sm" href="{% url 'event_new' %}">+New </a>
+                 <a class="font-semibold text-md" href="{% url 'events' %}">Events</a>  <a class="text-sm text-purple-400 capitalize hover:text-purple-800" href="{% url 'event_new' %}">+New </a>
              </li>
              <li class="my-6">
-                 <a class="font-semibold text-md" href="{% url 'Assets_list' %}">Assets</a>  <a class="text-sm" href="{% url 'Asset_new' %}">+New </a>
+                 <a class="font-semibold text-md" href="{% url 'Assets_list' %}">Assets</a>  <a <a class="text-sm text-purple-400 capitalize hover:text-purple-800" href="{% url 'Asset_new' %}">+New </a>
              </li>
              <li class="my-6">
-                 <a class="font-semibold text-md" href="{% url 'location_list' %}">Locations</a>  <a class="text-sm" href="{% url 'location_new' %}">+New </a>
+                 <a class="font-semibold text-md" href="{% url 'location_list' %}">Locations</a>  <a class="text-sm text-purple-400 capitalize hover:text-purple-800" href="{% url 'location_new' %}">+New </a>
              </li>
          </ul>
       </nav>
