--- a/event/templates/event_detail.html
+++ b/event/templates/event_detail.html
@@ -10,7 +10,7 @@
     <p>Locations {{ object.Locations }}</p>
   </div>
 
-  <p><a href="{% url 'event_edit' event.id %}">Edit</a> |
-    <a href="{% url 'event_delete' event.id %}">Delete</a></p>
-  <p>Back to <a href="{% url 'events' %}">All Articles</a>.</p>
+  <p><a class="text-purple-400 capitalize hover:text-purple-800" href="{% url 'event_edit' event.id %}">Edit</a> |
+    <a class="text-purple-400 capitalize hover:text-purple-800" href="{% url 'event_delete' event.id %}">Delete</a></p>
+  <p>Back to <a href="{% url 'events' %}">All Events</a>.</p>
 {% endblock content %}
