--- a/event/templates/events.html
+++ b/event/templates/events.html
@@ -21,7 +21,7 @@
           {% endfor %}
       </div>
       <div class="card-footer text-center text-muted">
-        <a href="{% url 'event_edit' event.id %}">Edit</a> | <a href="{% url 'event_delete' event.id %}">Delete</a>
+        <a class="text-purple-400 capitalize hover:text-purple-800" href="{% url 'event_edit' event.id %}">Edit</a> | <a class="text-purple-400 capitalize hover:text-purple-800" href="{% url 'event_delete' event.id %}">Delete</a>
       </div>
     </div>
   {% endfor %}
