--- a/event/templates/location_detail.html
+++ b/event/templates/location_detail.html
@@ -10,7 +10,7 @@
       <p>Assets : {{object.Assets}}</p>
   </div>
 
-  <p><a href="{% url 'location_edit' location.id %}">Edit</a> |
-    <a href="{% url 'location_delete' location.id %}">Delete</a></p>
-  <p>Back to <a href="{% url 'location_list' %}">All Articles</a>.</p>
+  <p><a class="text-purple-400 capitalize hover:text-purple-800" href="{% url 'location_edit' location.id %}">Edit</a> |
+    <a class="text-purple-400 capitalize hover:text-purple-800" href="{% url 'location_delete' location.id %}">Delete</a></p>
+  <p>Back to <a href="{% url 'location_list' %}">All Locations</a>.</p>
 {% endblock content %}
