--- a/event/templates/location_list.html
+++ b/event/templates/location_list.html
@@ -3,25 +3,42 @@
 {% block title %}Locations{% endblock title %}
 
 {% block content %}
-<div class="grid grid-cols-3 gap-4 w-5/6 pl-6 pt-6">
+<table class="locationTable w-5/6 pl-6 pt-6">
+    <tr>
+        <th>Name</th>
+        <th>Longitude</th>
+        <th>Latitude</th>
+        <th>Plus code</th>
+        <th>Google maps link</th>
+        <th>Radius</th>
+        <th>  </th>
+    </tr>
   {% for location in object_list %}
-    <div class="card">
+    <tr>
 
-
-      <div class="card-header">
-       <a href="{% url 'location_detail' location.id %}" class="font-weight-bold">{{ location.Name }}</a> &middot;<br>
-        <span class="text-muted">Longitude: {{ location.Longitude }} <br> Latitude: {{ location.Latitude }}  </span>
-      </div>
-      <div class="card-body">
-       Plus code: {{ location.Plus_code }} <br>
-          Google maps link: {{ location.Google_maps_link }}<br>
-          Radius : {{ location.Radius }}
-      </div>
-      <div class="card-footer text-center text-muted">
-        <a href="{% url 'location_edit' location.id %}">Edit</a> | <a href="{% url 'location_delete' location.id %}">Delete</a>
-      </div>
-    </div>
+      <td>
+       <a href="{% url 'location_detail' location.id %}" class="font-semibold">{{ location.Name }}</a>
+      </td>
+        <td>
+            {{ location.Longitude }}
+        </td>
+        <td>
+            {{ location.Latitude }}
+        </td>
+      <td>
+       {{ location.Plus_code }}
+      </td>
+        <td>
+            {{ location.Google_maps_link }}
+        </td>
+        <td>
+            {{ location.Radius }}
+        </td>
+      <td>
+        <a class="text-purple-400 capitalize hover:text-purple-800" href="{% url 'location_edit' location.id %}">Edit</a> | <a class="text-purple-400 capitalize hover:text-purple-800" href="{% url 'location_delete' location.id %}">Delete</a>
+      </td>
+    </tr>
 
   {% endfor %}
-</div>
+</table>
 {% endblock content %}
