--- a/templates/profile.html
+++ b/templates/profile.html
@@ -47,6 +47,6 @@
         </div>
     </div>
 
-  <p><a href="{% url 'profile_edit' user.id %}">Edit</a>
+  <p><a class="text-purple-400 capitalize hover:text-purple-800" href="{% url 'profile_edit' user.id %}">Edit</a>
 
 {% endblock content %}
