--- a/templates/profile_edit.html
+++ b/templates/profile_edit.html
@@ -4,8 +4,11 @@
 {% block content %}
   <h1 class="text-4xl font-bold text-black">Edit Profile</h1>
   <form class="creationForm my-6 w-2/3" method="POST"  enctype="multipart/form-data">{% csrf_token %}
-      <div class="creationForm grid grid-cols-2 gap-4">
+      <div class="profileEditForm grid grid-cols-2 gap-4">
           {{ form|crispy }}
+          <div class="mb-3">
+              <a class="text-purple-400 capitalize hover:text-purple-800"  href="{% url 'password_change' %}">change my password</a>
+          </div>
       </div>
 <div class="p-4 flex justify-end">
         <button class="bg-purple-800 text-white px-16 py-3 rounded outline-none block" type="submit">Update</button>
