--- a/templates/registration/password_change_done.html
+++ b/templates/registration/password_change_done.html
@@ -1,4 +1,4 @@
-{% extends 'nonLogedBase.html' %}
+{% extends '_base.html' %}
 {% block title %}Password Change Successful{% endblock title %}
 {% block content %}
     <h1 class="text-4xl font-bold text-black mb-3">Password change successful</h1>
