--- a/templates/registration/password_change_form.html
+++ b/templates/registration/password_change_form.html
@@ -1,7 +1,8 @@
-{% extends 'nonLogedBase.html' %}
+{% extends '_base.html' %}
 {% load crispy_forms_tags %}
 {% block title %}Password Change{% endblock title %}
 {% block content %}
+<a class="text-purple-400 capitalize hover:text-purple-800"  href="{% url 'profile_edit' user.id %}">Back</a>
 <h1 class="text-4xl font-bold text-black mb-3">Password Change</h1>
 <p>Please enter your old password, for security's sake, and then enter
 your new password twice so we can verify you typed it in correctly.</p>
