--- a/templates/nonLogedBase.html
+++ b/templates/nonLogedBase.html
@@ -18,19 +18,17 @@
   <header>
     <!-- Fixed navbar -->
     <div class="flex justify-between align-items-center p-6 bg-white border-bottom shadow-sm">
-        {% if user.is_authenticated %}
+        <div class="my-auto">
             <a href="{% url 'events' %}" class="navbar-brand my-0 font-bold block flex">
                 <div class="rounded-xl bg-purple-300 text-purple-800 p-4 mx-3">Dz</div>
                 <div class="font-bold  flex flex-col justify-center">DazShop</div>
             </a>
-
-
+        </div>
+    {% if user.is_authenticated %}
         <div class="flex w-1/6">
-             {% if user.profilePic %}
+            <div class="m-auto">
                 <img class="w-14 h-14 bg-gray-300 rounded-full mr-3" src="{{ user.profilePic.url }}">
-            {% else %}
-                <div class="w-14 h-14 bg-gray-300 rounded-full mr-3"></div>
-            {% endif %}
+            </div>
             <div class="flex flex-col justify-center ">
                 <p class="font-semibold text-lg capitalized">{{ user.username }}</p>
                 <p class="text-sm text-gray-300">{{ user.email }}</p>
@@ -43,10 +41,6 @@
 <!--        <p><a href="#">Log out</a></p>-->
 
       {% else %}
-        <a href="{% url 'login' %}" class="navbar-brand my-0 font-bold block flex">
-                <div class="rounded-xl bg-purple-300 text-purple-800 p-4 mx-3">Dz</div>
-                <div class="font-bold  flex flex-col justify-center">DazShop</div>
-            </a>
         <div class="flex flex-row " style="align-items: center;">
 <!--            <a class="bg-purple-800 text-white px-6 py-0.5 h-8 rounded outline-none mx-2 block " href="{% url 'login' %}">Log In</a>-->
             <a class="bg-purple-800 text-white px-6 py-0.5 h-8 rounded outline-none mx-2 block" href="{% url 'signup' %}">Sign Up</a>
@@ -55,7 +49,7 @@
     </div>
   </header>
      <div class="container">
-         <div class="max-w-xl mx-auto my-16">
+         <div class="max-w-xl mx-auto my-32">
 
     {% block content %}
     {% endblock content %}
