--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -1,14 +1,13 @@
-{% extends 'nonLogedBase.html' %}
-{% load crispy_forms_tags %}
+{% extends '_base.html' %}
 {% block title %}Log In{% endblock title %}
 {% block content %}
-<h1 class="text-4xl font-bold text-black text-center mb-3">Log In</h1>
+<h2 class="my-3">Log In</h2>
 <form method="post">
     {% csrf_token %}
-   {{ form|crispy }}
-    <a class="text-purple-400 capitalize hover:text-purple-800" href="{% url 'password_reset' %}">
-        forget your password?
-    </a>
-    <button class="bg-purple-800 text-white px-8 py-3 rounded outline-none block mx-auto my-6" type="submit">Log In</button>
+    <label class="capitalize my-4 py-5">username </label>
+    {{ form.username }}
+    <label>password</label>
+    {{ form.password }}
+    <button type="submit" class="my-5 bg-purple-800 text-white px-16 py-3 rounded outline-none block">Log In</button>
 </form>
 {% endblock content %}
