--- a/event/templates/event_detail.html
+++ b/event/templates/event_detail.html
@@ -7,7 +7,24 @@
         {% endif %}
     <h2>{{ object.Name }}</h2>
     <p> <span class="text-muted"> Starting date: {{ object.Starting_date }} | Ending date: {{ object.Ending_date }}</span></p>
-    <p>Locations {{ object.Locations }}</p>
+      <div class="flex">
+          <p class="mr-4">Locations:</p>
+          <ul>
+              {% for loc in object.Locations.all %}
+              <li>{{ loc }}</li>
+              {% endfor %}
+          </ul>
+
+      </div>
+      <div class="flex">
+          <p class="mr-4">Assets:</p>
+          <ul>
+              {% for asset in object.Assets.all %}
+              <li>{{ asset }}</li>
+              {% endfor %}
+          </ul>
+
+      </div>
   </div>
 
   <p><a class="text-purple-400 capitalize hover:text-purple-800" href="{% url 'event_edit' event.id %}">Edit</a> |
