--- a/event/templates/location_list.html
+++ b/event/templates/location_list.html
@@ -11,6 +11,7 @@
         <th>Plus code</th>
         <th>Google maps link</th>
         <th>Radius</th>
+        <th>Assets</th>
         <th>  </th>
     </tr>
   {% for location in object_list %}
@@ -33,6 +34,17 @@
         </td>
         <td>
             {{ location.Radius }}
+        </td>
+        <td>
+
+
+          <ul>
+              {% for asset in location.Assets.all %}
+              <li>{{ asset }}</li>
+              {% endfor %}
+          </ul>
+
+
         </td>
       <td>
         <a class="text-purple-400 capitalize hover:text-purple-800" href="{% url 'location_edit' location.id %}">Edit</a> | <a class="text-purple-400 capitalize hover:text-purple-800" href="{% url 'location_delete' location.id %}">Delete</a>
