--- a/event/templates/events.html
+++ b/event/templates/events.html
@@ -7,7 +7,7 @@
   {% for event in object_list %}
     <div class="card">
       {% if event.Photo %}
-     <img class="bookcover" src="{{ event.Photo.url }}">
+     <img class="w-full h-64 object-cover object-center" src="{{ event.Photo.url }}">
 {% endif %}
 
       <div class="card-header">
