--- a/event/templates/Asset_edit.html
+++ b/event/templates/Asset_edit.html
@@ -2,14 +2,15 @@
 {% load static %}
 {% load crispy_forms_tags %}
 {% block content %}
-  <h1 class="text-4xl font-bold text-black">Edit Asset</h1>
-  <form class="creationForm my-6 w-2/3" method="POST"  enctype="multipart/form-data">{% csrf_token %}
-      <div class="creationForm grid grid-cols-2 gap-4">
-          {{ form|crispy }}
-      </div>
-<div class="p-4 flex justify-end">
-        <button class="bg-purple-800 text-white px-16 py-3 rounded outline-none block" type="submit">Update</button>
-</div>
-  </form>
-
+  {% if user.id  == asset.user.id %}
+      <h1 class="text-4xl font-bold text-black">Edit Asset</h1>
+      <form class="creationForm my-6 w-2/3" method="POST"  enctype="multipart/form-data">{% csrf_token %}
+          <div class="creationForm grid grid-cols-2 gap-4">
+              {{ form|crispy }}
+          </div>
+    <div class="p-4 flex justify-end">
+            <button class="bg-purple-800 text-white px-16 py-3 rounded outline-none block" type="submit">Update</button>
+    </div>
+      </form>
+  {% endif %}
 {% endblock content %}
