--- a/event/templates/event_detail.html
+++ b/event/templates/event_detail.html
@@ -1,16 +1,18 @@
 {% extends '_base.html' %}
 
 {% block content %}
-  <div class="article-entry">
-      {% if object.Photo %}
-     <img class="bookcover" src="{{ object.Photo.url }}">
-        {% endif %}
-    <h2>{{ object.Name }}</h2>
-    <p> <span class="text-muted"> Starting date: {{ object.Starting_date }} | Ending date: {{ object.Ending_date }}</span></p>
-    <p>Locations {{ object.Locations }}</p>
-  </div>
+      {% if user.id  == object.user.id %}
+          <div class="article-entry">
+              {% if object.Photo %}
+             <img class="bookcover" src="{{ object.Photo.url }}">
+                {% endif %}
+            <h2>{{ object.Name }}</h2>
+            <p> <span class="text-muted"> Starting date: {{ object.Starting_date }} | Ending date: {{ object.Ending_date }}</span></p>
+            <p>Locations {{ object.Locations }}</p>
+          </div>
 
-  <p><a class="text-purple-400 capitalize hover:text-purple-800" href="{% url 'event_edit' event.id %}">Edit</a> |
-    <a class="text-purple-400 capitalize hover:text-purple-800" href="{% url 'event_delete' event.id %}">Delete</a></p>
-  <p>Back to <a href="{% url 'events' %}">All Events</a>.</p>
+          <p><a class="text-purple-400 capitalize hover:text-purple-800" href="{% url 'event_edit' event.id %}">Edit</a> |
+            <a class="text-purple-400 capitalize hover:text-purple-800" href="{% url 'event_delete' event.id %}">Delete</a></p>
+          <p>Back to <a href="{% url 'events' %}">All Events</a>.</p>
+    {% endif %}
 {% endblock content %}
