--- a/event/templates/events.html
+++ b/event/templates/events.html
@@ -3,12 +3,15 @@
 {% block title %}events{% endblock title %}
 
 {% block content %}
+{{user.id}}
 <div class="grid grid-cols-3 gap-4 w-5/6 pl-6 pt-6">
   {% for event in object_list %}
-    <div class="card">
-      {% if event.Photo %}
-     <img class="bookcover" src="{{ event.Photo.url }}">
-{% endif %}
+    {% if user.id  == event.user.id %}
+        <div class="card">
+          {% if event.Photo %}
+        <img class="bookcover" src="{{ event.Photo.url }}">
+            {% endif %}
+
 
       <div class="card-header">
         <a href="{% url 'event_detail' event.id %}" class="font-weight-bold">{{ event.Name }}</a> &middot;<br>
@@ -24,6 +27,9 @@
         <a class="text-purple-400 capitalize hover:text-purple-800" href="{% url 'event_edit' event.id %}">Edit</a> | <a class="text-purple-400 capitalize hover:text-purple-800" href="{% url 'event_delete' event.id %}">Delete</a>
       </div>
     </div>
+      {% endif %}
   {% endfor %}
+
+
 </div>
 {% endblock content %}
