--- a/event/templates/location_detail.html
+++ b/event/templates/location_detail.html
@@ -1,16 +1,18 @@
 {% extends '_base.html' %}
 
 {% block content %}
-  <div class="article-entry">
-      <h2>{{ object.Name }}</h2>
-      <p> <span class="text-muted">Longitude: {{ object.Longitude }} <br> Latitude: {{ object.Latitude }}</span></p>
-      <p>Google maps link : {{ object.Google_maps_link }}</p>
-      <p>Plus code : {{object.Plus_code}}</p>
-      <p>Radius : {{object.Radius}}</p>
-      <p>Assets : {{object.Assets}}</p>
-  </div>
+<!--  {% if user.id  == object.user.id %}-->
+      <div class="article-entry">
+          <h2>{{ object.Name }}</h2>
+          <p> <span class="text-muted">Longitude: {{ object.Longitude }} <br> Latitude: {{ object.Latitude }}</span></p>
+          <p>Google maps link : {{ object.Google_maps_link }}</p>
+          <p>Plus code : {{object.Plus_code}}</p>
+          <p>Radius : {{object.Radius}}</p>
+          <p>Assets : {{object.Assets}}</p>
+      </div>
 
-  <p><a class="text-purple-400 capitalize hover:text-purple-800" href="{% url 'location_edit' location.id %}">Edit</a> |
-    <a class="text-purple-400 capitalize hover:text-purple-800" href="{% url 'location_delete' location.id %}">Delete</a></p>
-  <p>Back to <a href="{% url 'location_list' %}">All Locations</a>.</p>
+      <p><a class="text-purple-400 capitalize hover:text-purple-800" href="{% url 'location_edit' location.id %}">Edit</a> |
+        <a class="text-purple-400 capitalize hover:text-purple-800" href="{% url 'location_delete' location.id %}">Delete</a></p>
+      <p>Back to <a href="{% url 'location_list' %}">All Locations</a>.</p>
+<!--  {% endif %}-->
 {% endblock content %}
