--- a/event/templates/location_list.html
+++ b/event/templates/location_list.html
@@ -14,31 +14,36 @@
         <th>  </th>
     </tr>
   {% for location in object_list %}
-    <tr>
+      {% if user.id  == location.user.id %}
+            <tr>
 
-      <td>
-       <a href="{% url 'location_detail' location.id %}" class="font-semibold">{{ location.Name }}</a>
-      </td>
-        <td>
-            {{ location.Longitude }}
-        </td>
-        <td>
-            {{ location.Latitude }}
-        </td>
-      <td>
-       {{ location.Plus_code }}
-      </td>
-        <td>
-            {{ location.Google_maps_link }}
-        </td>
-        <td>
-            {{ location.Radius }}
-        </td>
-      <td>
-        <a class="text-purple-400 capitalize hover:text-purple-800" href="{% url 'location_edit' location.id %}">Edit</a> | <a class="text-purple-400 capitalize hover:text-purple-800" href="{% url 'location_delete' location.id %}">Delete</a>
-      </td>
-    </tr>
+              <td>
+               <a href="{% url 'location_detail' location.id %}" class="font-semibold">{{ location.Name }}</a>
+              </td>
+                <td>
+                    {{ location.Longitude }}
+                </td>
+                <td>
+                    {{ location.Latitude }}
+                </td>
+              <td>
+               {{ location.Plus_code }}
+              </td>
+                <td>
+                    {{ location.Google_maps_link }}
+                </td>
+                <td>
+                    {{ location.Radius }}
+                </td>
+              <td>
+                <a class="text-purple-400 capitalize hover:text-purple-800" href="{% url 'location_edit' location.id %}">Edit</a> | <a class="text-purple-400 capitalize hover:text-purple-800" href="{% url 'location_delete' location.id %}">Delete</a>
+              </td>
+            </tr>
 
+    {% endif %}
   {% endfor %}
+
+
 </table>
+
 {% endblock content %}
