--- a/event/templates/events.html
+++ b/event/templates/events.html
@@ -14,7 +14,7 @@
 
 
       <div class="card-header">
-        <a href="{% url 'event_detail' event.id %}" class="font-weight-bold">{{ event.Name }}</a> &middot;<br>
+        <a href="{% url 'event_detail' event.id %}" class="font-weight-bold text-blue-600">{{ event.Name }}</a> &middot;<br>
         <span class="text-muted"> Starting date: {{ event.starting_date }} <br> Ending date: {{ event.ending_date }}</span>
       </div>
       <div class="card-footer text-center text-muted">
