--- a/event/templates/home.html
+++ b/event/templates/home.html
@@ -1,4 +1,4 @@
-{% extends '_base.html' %}
+{% extends 'homeBase.html' %}
 {% load static %}
 
 {% block title %}Home{% endblock title %}
@@ -7,7 +7,4 @@
 
 <h1>Homepage</h1>
   <img class="bookcover" src="{% static 'images/dfp.png' %}">
-<h1 class="color-red-800 text-xl  ">
-test red
-</h1>
 {% endblock content %}
