--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -10,5 +10,6 @@
         forget your password?
     </a>
     <button type="submit" class="bg-purple-800 text-white px-8 py-3 rounded outline-none block mx-auto my-6">Log In</button>
+        <p class="text-gray-500 text-center"> You don't have an account?  <a class="text-purple-400 capitalize hover:text-purple-800" href="{% url 'login' %}">Sign Up</a></p>
 </form>
 {% endblock content %}
