--- a/event/templates/event_detail.html
+++ b/event/templates/event_detail.html
@@ -8,7 +8,7 @@
                 {% endif %}
             <h2>{{ object.Name }}</h2>
             <p> <span class="text-muted"> Starting date: {{ object.Starting_date }} | Ending date: {{ object.Ending_date }}</span></p>
-            <p>Locations {{ object.Locations }}</p>
+            <p>Locations {{ object.Locations.name }}</p>
           </div>
 
           <p><a class="text-purple-400 capitalize hover:text-purple-800" href="{% url 'event_edit' event.id %}">Edit</a> |
