--- a/event/templates/Assets_list.html
+++ b/event/templates/Assets_list.html
@@ -5,7 +5,6 @@
 {% block content %}
 <div class="grid grid-cols-3 gap-4 w-5/6 pl-6 pt-6">
   {% for asset in object_list %}
-<<<<<<< HEAD
     {% if user.id  == asset.user.id %}
         <div class="card">
           {% if asset.featured_image %}
@@ -20,12 +19,11 @@
               Google maps link: {{ asset.Google_maps_link }}
           </div>
           <div class="card-footer text-center text-muted">
-            <a class="text-purple-400 capitalize hover:text-purple-800" href="{% url 'Asset_edit' asset.id %}">Edit</a> | <a class="text-purple-400 capitalize hover:text-purple-800" href="{% url 'Asset_delete' asset.id %}">Delete</>
+            <a class="text-purple-400 capitalize hover:text-purple-800" href="{% url 'Asset_edit' asset.id %}">Edit</a> | <a class="text-purple-400 capitalize hover:text-purple-800" href="{% url 'Asset_delete' asset.id %}">Delete</a>
           </div>
         </div>
 
     {% endif %}
-=======
     <div class="card">
       {% if asset.featured_image %}
      <img class="w-full h-64 object-cover object-center" src="{{ asset.featured_image.url }}">
@@ -40,11 +38,9 @@
           Google maps link: {{ asset.Google_maps_link }}
       </div>
       <div class="card-footer text-center text-muted">
-        <a class="text-purple-400 capitalize hover:text-purple-800" href="{% url 'Asset_edit' asset.id %}">Edit</a> | <a class="text-purple-400 capitalize hover:text-purple-800" href="{% url 'Asset_delete' asset.id %}">Delete</>
+        <a class="text-purple-400 capitalize hover:text-purple-800" href="{% url 'Asset_edit' asset.id %}">Edit</a> | <a class="text-purple-400 capitalize hover:text-purple-800" href="{% url 'Asset_delete' asset.id %}">Delete</a>
       </div>
     </div>
->>>>>>> bce535a9a85cf5212dd3fbcc66bdf3b80bf31228
-
   {% endfor %}
 </div>
 {% endblock content %}
