--- a/event/templates/Assets_list.html
+++ b/event/templates/Assets_list.html
@@ -6,17 +6,16 @@
 <div class="grid grid-cols-3 gap-4 w-5/6 pl-6 pt-6">
   {% for asset in object_list %}
     {% if user.id  == asset.user.id %}
-        <div class="card">
+        <div class="card p-3 rounded-md">
           {% if asset.featured_image %}
-         <img class="bookcover" src="{{ asset.featured_image.url }}">
+         <img class="w-full h-64 object-cover object-center rounded-md" src="{{ asset.featured_image.url }}">
             {% endif %}
-          <div class="card-header">
-           <a href="{% url 'Asset_detail' asset.id %}" class="font-weight-bold">{{ asset.code }}</a> &middot;<br>
-            <span class="text-muted">Expiry_date: {{ asset.Expiry_date }} <br> Expiry_time: {{ asset.Expiry_time }}  </span>
-          </div>
           <div class="card-body">
-           ASSETS TYPE: {{ asset.ASSETS_TYPE }} <br>
-              Google maps link: {{ asset.Google_maps_link }}
+              <a href="{% url 'Asset_detail' asset.id %}" class="font-weight-bold">
+                Expiry_date: {{ asset.Expiry_date }} <br>
+                Expiry_time: {{ asset.Expiry_time }}  <br>
+                ASSETS TYPE: {{ asset.ASSETS_TYPE }} <br>
+                Google maps link: {{ asset.Google_maps_link }}</a>
           </div>
           <div class="card-footer text-center text-muted">
             <a class="text-purple-400 capitalize hover:text-purple-800" href="{% url 'Asset_edit' asset.id %}">Edit</a> | <a class="text-purple-400 capitalize hover:text-purple-800" href="{% url 'Asset_delete' asset.id %}">Delete</a>
