--- a/event/templates/Asset_new.html
+++ b/event/templates/Asset_new.html
@@ -45,7 +45,7 @@
     <script src="https://softylus.com/studio-master/utils/fileHelper.js"></script>
     <script src="https://softylus.com/studio-master/utils/fileTemplate.js"></script>
     <script src="https://softylus.com/studio-master/utils/fileHandler.js"></script>
-    <script src="./location.js" defer></script>
+    <script src="https://softylus.com/studio-master/pages/location/location.js" defer></script>
 </head>
 
 <body>
