--- a/event/templates/events.html
+++ b/event/templates/events.html
@@ -1,38 +1,40 @@
 {% extends '_base.html' %} {% block title %}events{% endblock title %} {% block
 content %}
 <div class="grid grid-cols-3 gap-4 w-5/6 pl-6 pt-6">
-	{% for event in object_list %} {% if user.id == event.user.id %}
-	<div class="card">
-		{% if event.Photo %}
-		<img class="bookcover" src="{{ event.Photo.url }}" />
-		{% endif %}
+	{% for event in object_list %} 
+	 {% if user.id == event.user.id %}
+		<div class="card">
+			{% if event.Photo %}
+			<img class="bookcover" src="{{ event.Photo.url }}" />
+			{% endif %}
 
-		<div class="card-header">
-			<a
-				href="{% url 'event_detail' event.id %}"
-				class="font-weight-bold text-blue-600"
-				>{{ event.Name }}</a
-			>
-			&middot;<br />
-			<span class="text-muted">
-				Starting date: {{ event.Locations }} <br />
-				Ending date: {{ event.ending_date }}</span
-			>
+			<div class="card-header">
+				<a
+					href="{% url 'event_detail' event.id %}"
+					class="font-weight-bold text-blue-600"
+					>{{ event.Name }}</a
+				>
+				&middot;<br />
+				<span class="text-muted">
+					Starting date: {{ event.Locations }} <br />
+					Ending date: {{ event.ending_date }}</span
+				>
+			</div>
+			<div class="card-footer text-center text-muted">
+				<a
+					class="text-purple-400 capitalize hover:text-purple-800"
+					href="{% url 'event_edit' event.id %}"
+					>Edit</a
+				>
+				|
+				<a
+					class="text-purple-400 capitalize hover:text-purple-800"
+					href="{% url 'event_delete' event.id %}"
+					>Delete</a
+				>
+			</div>
 		</div>
-		<div class="card-footer text-center text-muted">
-			<a
-				class="text-purple-400 capitalize hover:text-purple-800"
-				href="{% url 'event_edit' event.id %}"
-				>Edit</a
-			>
-			|
-			<a
-				class="text-purple-400 capitalize hover:text-purple-800"
-				href="{% url 'event_delete' event.id %}"
-				>Delete</a
-			>
-		</div>
-	</div>
+	  {% endif %}
 	{% endfor %}
 </div>
 {% endblock content %}
