--- a/event/templates/events.html
+++ b/event/templates/events.html
@@ -1,6 +1,6 @@
-{% extends '_base.html' %} {% block title %}events{% endblock title %} {% block
-content %}
-<div class="grid grid-cols-3 gap-4 w-5/6 pl-6 pt-6">
+{% extends '_base.html' %} {% block title %}events{% endblock title %} 
+{% block content %}
+  <div class="grid grid-cols-3 gap-4 w-5/6 pl-6 pt-6">
 	{% for event in object_list %} 
 	 {% if user.id == event.user.id %}
 		<div class="card">
@@ -36,5 +36,6 @@ content %}
 		</div>
 	  {% endif %}
 	{% endfor %}
-</div>
+   </div>
+
 {% endblock content %}
