--- a/event/templates/Asset_new.html
+++ b/event/templates/Asset_new.html
@@ -118,6 +118,7 @@
             </div>
             <div id="content-preview" target="content-file">
             </div>
+         <button value="submit" type="submit">submit </button>
         </div>
       </div>
     </from>
