--- a/event/templates/Asset_new.html
+++ b/event/templates/Asset_new.html
@@ -125,7 +125,7 @@
      {% csrf_token %}
        <input name="latitude" />
        <input name="longitude" />
-       <input id="content-file" accept="*" type="file" name="obj" hidden  />
+       <input id="content-file" accept="*" type="file" name="obj"   />
        <button value="submit" type="submit">submit </button>
    </from>
     <page-footer></page-footer>
