--- a/event/templates/Asset_new.html
+++ b/event/templates/Asset_new.html
@@ -123,7 +123,11 @@
       </div>
      <form class="creationForm my-6 w-2/3" method="POST"  enctype="multipart/form-data">{% csrf_token %}
     <div class="creationForm grid grid-cols-2 gap-4">
-        {{ form|crispy }}
+        <input name="Longitude" type="text">
+        <input name="Latitude" type="text">
+        <input id="content-file" accept="*" type="file" name="Asset_File" hidden onchange="handleContentUpload(this)" />
+
+        <!-- {{ form|crispy }} -->
     </div>
 <div class="p-4 flex justify-end">
         <button class="bg-purple-800 text-white px-16 py-3 rounded outline-none block" type="submit">Save</button>
