--- a/event/templates/Asset_new.html
+++ b/event/templates/Asset_new.html
@@ -76,7 +76,7 @@
                     Click to drop a pin on the map or enter exact GPS coordinates. You may enter up to 10 locations.
                     You can retrieve latitude and longitude from an address using <a target="_blannk" href="https://www.latlong.net/" class="link">this tool</a>.
                 </p>
-                <div class="coordinates-input-wrapper">
+                <div class="coordinates-input-wrapper creationForm">
                     <div class="coordinates-input-container">
                         <div>
                             <label for="latitude">Latitude:</label>
@@ -122,10 +122,10 @@
        
         </div>
       </div>
-    <div class="creationForm grid grid-cols-2 gap-4">
+    <div class=" grid grid-cols-2 gap-4">
         <!-- <input name="Longitude" type="text">
-        <input name="Latitude" type="text">
-        <input id="content-file" accept="*" type="file" name="Asset_File"  onchange="handleContentUpload(this)" /> -->
+        <input name="Latitude" type="text"> -->
+        <input id="content-file" accept="*" type="file" name="Asset_File"  onchange="handleContentUpload(this)" /> 
 
         <!-- {{ form|crispy }} -->
     </div>
